feat: add MOTD UDP query to get real player counts from downstream servers